
5.2a2 -> 5.2a3:
    - jbj: lua: inline a copy of getdate.c
    - jbj: lua: change paths to extend lua with external modules on linux.
    - jbj: WR: lua: display "rpm:lua:foo" progname w chkconfig/useradd/groupadd
	errors.
    - jbj: WR: fix: sqlite assertion failure while sequentially retrieving keys.
    - bero: Ark: create --with-vendor=ark, borrow some Mandriva patches, add
        use-gnu-tar-compression-detection patch for vendor ark
    - jbj: eliminate --with-vendor arguments that are not in use.
    - jbj: eliminate rpmal debugging code.
    - jbj: lua: disable mkdtemp(3) bindings, no solaris portability atm.
    - jbj: lua: bind mkdtemp(3) in lposix.c
    - jbj: macros: add %{mkdtemp:...} primitive (consistent leading whitespace too).
    - jbj: devtool: provision a fedora host sufficiently to build from cvs.
    - jbj: add cudf-tests example packaging.
    - jbj: include tests/*.src.rpm, exclude tests/ref/CVS/*, with "make dist".
    - proyvind: lua: explicitly link against libexpat as assumption on implicit
	linking cannot be guaranteed.
    - proyvind: add --with-extra-path-macros configure option that adds
	 additional macro file paths without overriding existing defaults.
    - proyvind: add --with-vendor configure option to define RPM_VENDOR_*.
    - proyvind: Mandriva: make loglevel for dependency loop detection
	overridable, debug-level by default. (loop-detection-optional-loglevel)
    - jbj: fix: __OpenBSD__ insque(3) needs rpmsq rock initialized.
    - jbj: add #ifdef's needed to compile on __OpenBSD__.
    - proyvind: Mandriva: make directory & symlink dependencies optional with
	%{_check_symlink_deps} & %{_check_dirname_deps}. (optional-dirname-and-symlink-deps)
    - proyvind: Mandriva: prefer file extension for detecting file compression.
	(extension-based-compression-detection)
    - proyvind: Mandriva: disable buildrequires checking for building src.rpms.
	(no-deps-on-building-srpms)